oldversion/v2.7.0/README.md
# TabArchiver

Chrome/Edge拡張機能：全タブを一括ブックマーク

> **技術情報:** バージョン・ショートカットキーなどの詳細は `src/manifest.json` を参照

---

## 機能

- **タブ一覧表示・編集**
  - 保存前に全タブを確認できる一覧表示
  - ウィンドウごとにグループ化、ファビコンとタイトル表示
  - ×ボタン: タブを閉じる
  - -ボタン: タブを閉じずにアーカイブ対象から除外
- **全ウィンドウ一括ブックマーク**（デフォルト）
  - 複数ウィンドウ: ウィンドウごとにサブフォルダ（Window1, Window2, ...）
  - 単一ウィンドウ: 直接ブックマーク保存
  - 「現在のウィンドウのみ」モードも選択可
- **自動フォルダ名生成**
  - デフォルト: `月-日` （例: `01-15`）
  - オプションでタブ要約を有効化: `月-日_要約キーワード` （例: `01-15_GitHub_開発`）
- **フォルダ名の手動編集**
- **カスタム保存先フォルダ選択**（ツリー表示・フォルダ作成・名前変更機能付き）
- **キーボードショートカット**

---

## インストール

1. このプロジェクトを任意の場所に保存
2. Chrome/Edgeで `chrome://extensions/` を開く
3. 「開発者モード」を有効化
4. 「パッケージ化されていない拡張機能を読み込む」
5. `tab-archiver-extension/src` フォルダを選択

---

## 使い方

### 方法1: タブ確認・編集してから保存
1. 拡張機能アイコンをクリック
2. タブ一覧で保存対象を確認
   - ×ボタン: 不要なタブを閉じる
   - -ボタン: 今回の保存から除外（タブは残る）
3. フォルダ名を編集（任意）
4. 保存ボタンまたはEnterキー

### 方法2: 自動保存
キーボードショートカット（デフォルト: Alt+Shift+S）で即座に保存

**ショートカットキーの変更:**  
`chrome://extensions/shortcuts` でカスタマイズ可能

### 設定
拡張機能を右クリック → オプション
- 日付フォーマット
- タブ要約をフォルダ名に含める（デフォルト: 無効）
- 要約の最大文字数
- タイトルの最大文字数
- 保存後にタブを閉じる
- 保存対象（現在のウィンドウ / 全ウィンドウ）
- カスタム保存先フォルダ（フォルダ作成・名前変更可）

---

## 技術仕様

- Manifest V3
- Service Worker
- パーミッション: bookmarks, tabs, storage

### ファイル構成

```
tab-archiver-extension/
 src/
    manifest.json
    background.js
    popup.html/css/js
    options.html/css/js
    constants.js        # 共通定数
    icons/
 README.md
 CHANGELOG.md
 DEVELOPMENT_LOG.md
 TODO.md
```

---

## 制限事項

- ページコンテンツは取得しません（タイトルとURLのみ）
- Service Worker環境のため通知機能は利用できません

---

## 開発情報

更新履歴: [CHANGELOG.md](CHANGELOG.md)  
開発ドキュメント: [DEVELOPMENT_LOG.md](DEVELOPMENT_LOG.md)

---

## ライセンス

個人使用・社内使用自由


